--- a/app/src/main/res/values-h600dp/dimens.xml
+++ b/app/src/main/res/values-h600dp/dimens.xml
@@ -2,5 +2,5 @@
 <resources>
     <dimen name="test_dimen">20dp</dimen>
     <dimen name="super_left_padding">30dp</dimen>
-    <dimen name="margin_top">40</dimen>
+    <dimen name="margin_top">10dp</dimen>
 </resources>
